// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrendingGraph default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TrendingGraph
    data={
        Object {
            "2017-01-01 01": Object {
              "c": 1,
            },
            "2017-01-01 02": Object {
              "c": 2,
            },
            "2017-01-01 03": Object {
              "c": 3,
            },
          }
    }
    height={50}
    width={200}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <path
        className="trending_graph__line"
        d={null}
        fill="none"
        strokeLinecap="round"
        strokeLinejoin="round"
/>,
      "className": "trending_graph",
      "height": 50,
      "viewBox": "0 0 200 50",
      "width": 200,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "className": "trending_graph__line",
        "d": null,
        "fill": "none",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <path
          className="trending_graph__line"
          d={null}
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
/>,
        "className": "trending_graph",
        "height": 50,
        "viewBox": "0 0 200 50",
        "width": 200,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "trending_graph__line",
          "d": null,
          "fill": "none",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`TrendingGraph is loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TrendingGraph
    data={
        Object {
            "2017-01-01 01": Object {
              "c": 1,
            },
            "2017-01-01 02": Object {
              "c": 2,
            },
            "2017-01-01 03": Object {
              "c": 3,
            },
          }
    }
    height={50}
    isLoading={true}
    width={200}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <SvgLoadingAnimation
        height={50}
        width={200}
/>,
      "className": "trending_graph",
      "height": 50,
      "viewBox": "0 0 200 50",
      "width": 200,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "height": 50,
        "width": 200,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <SvgLoadingAnimation
          height={50}
          width={200}
/>,
        "className": "trending_graph",
        "height": 50,
        "viewBox": "0 0 200 50",
        "width": 200,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "height": 50,
          "width": 200,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`TrendingGraph no data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TrendingGraph
    data={undefined}
    height={50}
    width={200}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "trending_graph",
      "height": 50,
      "viewBox": "0 0 200 50",
      "width": 200,
    },
    "ref": null,
    "rendered": null,
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "trending_graph",
        "height": 50,
        "viewBox": "0 0 200 50",
        "width": 200,
      },
      "ref": null,
      "rendered": null,
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
